--- a/sections-ko/README
+++ b/sections-ko/README
@@ -1,11 +1,22 @@
 == Modern Perl Book의 한글 번역 ==
 
+2010년 말에 배포된 최신 펄 문서를 번역하여 펄의 발전을 도모합시다.
+
+번역은 OmegaT 라는 번역 도구를 이용하고 있습니다. 이렇게 생겼습니다. --> http://twitpic.com/472pei
+이렇게 편리하게 용어 사전과 함께 한줄 한줄식 상호적으로 번역할 수 있습니다.
+이 프로그램은 자바 기반으로 오픈소스입니다. --> http://omegat.org/
+
+이 번역에 참여하실 분은 간단히 이 프로젝트를 fork하여도 되며,
+공개 rsa키를 제공해 주시면 collaborator로 등록해 드립니다.
+언제든 트위터(http://twitter.com/am0c)로 멘션을 주시거나 메일을 주시기 바랍니다. (amorette AT cpan.org)
+
+번역에 관해 질문이나 토론을 위해서는 언제든지 IRC freenode 서버의 #perl-kr 채널로 오시기 바랍니다.
+거의 항상 많은 분들이 상주해 계시기 때문에, 들어오셔서 인사해주시면 얼마 후 반응이 올 것입니다.
+
 sections-ko 디렉터리와 build-ko 디렉터리 외부에는 어떠한 한글 번역 프로젝트
 관련 파일 수정이 이루어져서는 안됩니다.
 
 sections-ko/source 디렉터리는 sections의 문서들이 복사되어 관리되고 있습니다.
-
-번역은 OmegaT 라는 번역 도구를 이용해야 합니다.
 
 프로젝트에서 자동으로 생성하는 빌드 파일과 백업 파일 등은 git에 등록하지 않습니다.
 
